--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -15,6 +15,13 @@
     }
 }
 
+@media (min-width: 500px) and (min-height: 401px) {
+    .Burger {
+        width: 450px;
+        height: 400px;
+    }
+}
+
 @media (min-width: 1000px) and (min-height: 700px) {
     .Burger {
         width: 700px;
