--- a/src/components/UI/Backdrop/Backdrop.module.css
+++ b/src/components/UI/Backdrop/Backdrop.module.css
@@ -1,9 +1,9 @@
-.BackDrop {
+.Backdrop {
     width: 100%;
     height: 100%;
-    z-index: 100;
     position: fixed;
+    z-index: 100;
     left: 0;
     top: 0;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 }
